# server/model/cart_model.go
@@ -56,6 +56,7 @@ func (db *cartDatabase) FindCartByUserId(userId int64) ([]dto.GetCartOutputElem,
 				pkg_count,
 				mp.price_real AS pkg_price,
 				mp.avatar_url,
+       			mp.target,
 				mp.name AS pkg_name,
 				mh.id AS hospital_id,
 				mh.name AS hospital_name,
